--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ nav {
     padding: 20px;
     margin-bottom: 20px;
     width: 50%;
+    height: 272.667px;
     float: left
 }   
 
@@ -45,6 +46,8 @@ nav {
     text-align: center;
     padding: 20px;
     margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 20px
 }
 
 #p {
