--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav {
     padding-top: 20px;
     padding: 20px;
     margin-bottom: 20px;
-    width: 50%;
+    width: 50%; 
     height: 272.667px;
     float: left
 }   
@@ -37,6 +37,7 @@ nav {
     margin-top: 20px;
     text-align: center;
     padding: 20px;
+    margin-top: 45px;
     margin-bottom: 20px;
     
 }
@@ -48,6 +49,7 @@ nav {
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 20px
+    
 }
 
 #p {
