--- a/style.css
+++ b/style.css
@@ -22,10 +22,12 @@ nav {
 #derecho {
     background: #ebebeb;
     text-align: center;
-    padding-top: 20px;
-    padding: 20px;
+    padding-top: 40px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
     margin-bottom: 20px;
-    width: 50%; 
+    width: 57%; 
     height: 272.667px;
     float: left
 }   
@@ -36,9 +38,10 @@ nav {
     background: #777;
     margin-top: 20px;
     text-align: center;
-    padding: 20px;
+    border: 20px;
+    padding: 10px;
     margin-top: 45px;
-    margin-bottom: 20px;
+    
     
 }
 #h1,h2,h3 {
@@ -46,6 +49,7 @@ nav {
     background: #ebebeb;
     text-align: center;
     padding: 20px;
+    border: 10px;
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 20px
@@ -63,10 +67,10 @@ nav {
 #aside {
     background: #ebebeb;
     text-align: center;
-    padding: 20px;
+    padding-top: 40px;
     margin-left: 20px;
-    height: 272.667px;
-    width: 380px;
+    height: 277px;
+    width: 372px;
     float: left
 
             
