--- a/style.css
+++ b/style.css
@@ -38,9 +38,12 @@ nav {
     background: #777;
     margin-top: 20px;
     text-align: center;
+    height: 167px;
     border: 20px;
-    padding: 10px;
-    margin-top: 45px;
+    padding: 25px;
+    margin-top: 30px;
+    margin-bottom: 10px
+    
     
     
 }
@@ -50,6 +53,7 @@ nav {
     text-align: center;
     padding: 20px;
     border: 10px;
+    border-top: 40px;
     margin-bottom: 10px;
     font-weight: bold;
     font-size: 20px
